Fixed: wflow-consoleweb - Xadmin Theme - Search icon for filter button on smaller screens not properly aligned @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
@@ -266,3 +266,11 @@ body .dataList .select_checkbox label i {
     border-radius: 0.25rem;
     margin-top: 4px;
 }
+
+@media (max-width: 767px) {
+    body .dataList .filters .filter-cell:last-child:after {
+        position: relative !important;
+        top: -2px !important;
+        left: -29px !important;
+    }
+}
